ci: build flutter apps on windows arm64

--- a/.github/workflows/test-windows-msix-free-arm64.yml
+++ b/.github/workflows/test-windows-msix-free-arm64.yml
@@ -1,4 +1,4 @@
-name: Test Windows msix (pro)
+name: Test Windows msix (free arm64)
 
 on:
   workflow_dispatch:
@@ -36,11 +36,11 @@ jobs:
       - name: Check version
         run: echo ${{ steps.version_step.outputs.version }}
 
-  msix_pro:
-    name: Create msix (pro)
-    runs-on: windows-2022
+  msix_free:
+    name: Create msix (free arm64)
+    runs-on: windows-11-arm
     env:
-      Platform: x64
+      Platform: arm64
     needs:
       - get-version
     steps:
@@ -76,47 +76,44 @@ jobs:
         shell: pwsh
         run: |
           echo $env:RUNNER_TEMP
-
-          Copy-Item -Path "windows\pro\CMakeLists.txt" -Destination "windows\CMakeLists.txt" -Force
-          Copy-Item -Path "windows\pro\main.cpp" -Destination "windows\runner\main.cpp" -Force
-          Copy-Item -Path "windows\pro\Runner.rc" -Destination "windows\runner\Runner.rc" -Force
-
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
-          $certificatePath = "$env:RUNNER_TEMP\picguard-pro.pfx"
-          $bytes = echo $env:WINDOWS_CERTIFICATE_PRO | %{[Convert]::FromBase64String($_)}
+          $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
+          $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
           [IO.File]::WriteAllBytes("$certificatePath", $bytes)
 
           $yamlFile = ".\pubspec.yaml"
           $yamlContent = Get-Content -Raw -Path $yamlFile
 
           # 获取环境变量的值
-          # $identityName = (Get-Item -Path Env:WINDOWS_IDENTITY_NAME_PRO).Value
-          # $publisher = (Get-Item -Path Env:WINDOWS_PUBLISHER_PRO).Value
-          # $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME_PRO).Value
-          $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD_PRO).Value
+          # $identityName = (Get-Item -Path Env:WINDOWS_IDENTITY_NAME).Value
+          # $publisher = (Get-Item -Path Env:WINDOWS_PUBLISHER).Value
+          # $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME).Value
+          $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD).Value
 
           # 使用 yq 更新多个字段
-          $updatedYamlContent = echo $yamlContent | yq e ".msix_config.display_name = `"PicGuard Pro`" | .msix_config.certificate_path = `"$certificatePath`" | .msix_config.certificate_password = `"$certificatePassword`" | .msix_config.architecture = `"$env:Platform`" | del(.msix_config.identity_name) | del(.msix_config.publisher) | del(.msix_config.publisher_display_name)" -
+          $updatedYamlContent = echo $yamlContent | yq e ".msix_config.certificate_path = `"$certificatePath`" | .msix_config.certificate_password = `"$certificatePassword`" | .msix_config.architecture = `"$env:Platform`" | del(.msix_config.identity_name) | del(.msix_config.publisher) | del(.msix_config.publisher_display_name)" -
 
           # 将更新后的内容写回文件
           Set-Content -Path $yamlFile -Value $updatedYamlContent
         env:
-          WINDOWS_CERTIFICATE_PRO: ${{ secrets.WINDOWS_CERTIFICATE_PRO }}
-          WINDOWS_CERTIFICATE_PASSWORD_PRO: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD_PRO }}
-          WINDOWS_IDENTITY_NAME_PRO: ${{ secrets.WINDOWS_IDENTITY_NAME_PRO }}
-          WINDOWS_PUBLISHER_PRO: ${{ secrets.WINDOWS_PUBLISHER_PRO }}
-          WINDOWS_PUBLISHER_NAME_PRO: ${{ secrets.WINDOWS_PUBLISHER_NAME_PRO }}
+          WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
+          WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
+          WINDOWS_IDENTITY_NAME: ${{ secrets.WINDOWS_IDENTITY_NAME }}
+          WINDOWS_PUBLISHER: ${{ secrets.WINDOWS_PUBLISHER }}
+          WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
 
       - name: Install flutter dependencies
         run: flutter pub get
 
       - name: Build windows
-        run: flutter build windows --dart-define-from-file=.env --target lib/main_pro.dart
+        run: |
+          set FLUTTER_WINDOWS_PLATFORM="$env:Platform"
+          flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Crate msix
         run: |
-          dart run msix:create --build-windows false --output-name "picguard-pro-$env:VERSION_SHORT.$env:BUILD_NUMBER`-windows-$env:Platform"
+          dart run msix:create --build-windows false --output-name "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER`-windows-$env:Platform"
         env:
           VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
           BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
@@ -128,18 +125,18 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: windows-msix-pro-artifact
+          name: windows-msix-artifact
           path: .\build\windows\${{ env.Platform }}\runner\Release\*.msix
 
       - name: Clean up
         if: ${{ always() }}
         run: |
           ls
-          if (test-path -Path "$env:RUNNER_TEMP\picguard-pro.pfx") {
-            echo "$env:RUNNER_TEMP\picguard-pro.pfx"
-            remove-item -Path "$env:RUNNER_TEMP\picguard-pro.pfx" -Force -ErrorAction SilentlyContinue
+          if (test-path -Path "$env:RUNNER_TEMP\picguard.pfx") {
+            echo "$env:RUNNER_TEMP\picguard.pfx"
+            remove-item -Path "$env:RUNNER_TEMP\picguard.pfx" -Force -ErrorAction SilentlyContinue
           } else {
-            echo "File($env:RUNNER_TEMP\picguard-pro.pfx) doesn't exist."
+            echo "File($env:RUNNER_TEMP\picguard.pfx) doesn't exist."
           }
           if (test-path -Path "$pwd\.env") {
             echo "Remove file($pwd\.env)"
