--- a/.github/workflows/test-windows-msi-arm64.yml
+++ b/.github/workflows/test-windows-msi-arm64.yml
@@ -1,4 +1,4 @@
-name: Test Windows msix (free)
+name: Test Windows msi (arm64)
 
 on:
   workflow_dispatch:
@@ -21,8 +21,8 @@ jobs:
         id: version_step
         run: |
           VERSION=$(yq '.version' pubspec.yaml)
-          echo "$VERSION"
-          
+          echo "VERSION: $VERSION."
+
           VERSION_SHORT=$(echo "$VERSION" | sed -e "s/+.*//")
           echo "VERSION_SHORT: $VERSION_SHORT."
 
@@ -33,14 +33,11 @@ jobs:
           echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
 
-      - name: Check version
-        run: echo ${{ steps.version_step.outputs.version }}
-
-  msix_free:
-    name: Create msix (free)
-    runs-on: windows-2022
+  msi:
+    name: Create msi (arm64)
+    runs-on: windows-11-arm
     env:
-      Platform: x64
+      Platform: arm64
     needs:
       - get-version
     steps:
@@ -55,6 +52,18 @@ jobs:
       - name: Flutter doctor -v
         run: flutter doctor -v
 
+      - name: Install yq
+        shell: pwsh
+        run: |
+          choco install yq
+          yq --version
+
+      - name: Install wix toolset
+        shell: pwsh
+        run: |
+          dotnet tool install --global wix
+          wix --version
+
       - name: Configure .env
         run: |
           echo "$pwd"
@@ -66,65 +75,71 @@ jobs:
       - name: copy eula.rtf to the windows folder
         run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
-      - name: Install yq
+      - name: Get SignTool path
+        run: Get-Command signtool.exe
         shell: pwsh
-        run: |
-          choco install yq
-          yq --version
-
-      - name: Update config
-        shell: pwsh
-        run: |
-          echo $env:RUNNER_TEMP
-          # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
-          # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
-          $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
-          $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
-          [IO.File]::WriteAllBytes("$certificatePath", $bytes)
-
-          $yamlFile = ".\pubspec.yaml"
-          $yamlContent = Get-Content -Raw -Path $yamlFile
-
-          # 获取环境变量的值
-          # $identityName = (Get-Item -Path Env:WINDOWS_IDENTITY_NAME).Value
-          # $publisher = (Get-Item -Path Env:WINDOWS_PUBLISHER).Value
-          # $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME).Value
-          $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD).Value
-
-          # 使用 yq 更新多个字段
-          $updatedYamlContent = echo $yamlContent | yq e ".msix_config.certificate_path = `"$certificatePath`" | .msix_config.certificate_password = `"$certificatePassword`" | .msix_config.architecture = `"$env:Platform`" | del(.msix_config.identity_name) | del(.msix_config.publisher) | del(.msix_config.publisher_display_name)" -
-
-          # 将更新后的内容写回文件
-          Set-Content -Path $yamlFile -Value $updatedYamlContent
-        env:
-          WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
-          WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
-          WINDOWS_IDENTITY_NAME: ${{ secrets.WINDOWS_IDENTITY_NAME }}
-          WINDOWS_PUBLISHER: ${{ secrets.WINDOWS_PUBLISHER }}
-          WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
 
       - name: Install flutter dependencies
         run: flutter pub get
 
       - name: Build windows
-        run: flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
-
-      - name: Crate msix
         run: |
-          dart run msix:create --build-windows false --output-name "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER`-windows-$env:Platform"
+          set FLUTTER_WINDOWS_PLATFORM=arm64
+          flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
+
+      - name: Update msi version
+        shell: pwsh
+        run: |
+          # 文件路径
+          $filePath = "msi\picguard\picguard\Package.wxs"
+
+          # 读取文件内容
+          $content = Get-Content -Path $filePath -Raw
+
+          # 替换使用正则表达式
+          $newContent = $content -replace "\b\d{1,4}\.\d{1,4}\.\d{1,4}\.\d{1,4}\b", "$env:VERSION_SHORT.$env:BUILD_NUMBER"
+
+          # 写回文件
+          Set-Content -Path $filePath -Value $newContent -NoNewline
         env:
           VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
           BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
 
+      - name: Create msi
+        shell: pwsh
+        run: |
+          echo $env:RUNNER_TEMP
+          $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
+          # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
+          # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
+          $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
+          [IO.File]::WriteAllBytes("$certificatePath", $bytes)
+
+          $env:IconPath = "$pwd\windows\runner\resources\app_icon.ico"
+          $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
+          dotnet build .\msi\picguard\picguard\picguard.wixproj --arch "$env:Platform" --configuration Release
+
+          $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\picguard\bin\$env:Platform\Release\*\*.msi")
+        env:
+          WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
+          WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
+          WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
+
       # Package the build.
-      - name: Copy build for msix
-        run: ls
-        working-directory: build\windows\${{ env.Platform }}\runner\Release
+      - name: Copy build for msi
+        shell: pwsh
+        run: |
+          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\Release\en-US\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER`-windows-$env:Platform`-en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\Release\zh-CN\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER`-windows-$env:Platform`-zh-CN.msi"
+        env:
+          VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
 
       - uses: actions/upload-artifact@v4
         with:
-          name: windows-msix-artifact
-          path: .\build\windows\${{ env.Platform }}\runner\Release\*.msix
+          name: windows-msi-artifact
+          path: .\msi\picguard\picguard\bin\${{ env.Platform }}\Release\*\*.msi
 
       - name: Clean up
         if: ${{ always() }}
