fix: add powershell

--- a/.github/workflows/test-windows-exe-arm64.yml
+++ b/.github/workflows/test-windows-exe-arm64.yml
@@ -14,10 +14,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          flutter-version: '3.29.2'
+        shell: pwsh
+        run: .\scripts\install-flutter-github-actions.ps1
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -39,6 +37,10 @@ jobs:
 
       - name: Install fastforge
         run: dart pub global activate fastforge
+
+      - name: Get SignTool path
+        run: Get-Command signtool.exe
+        shell: pwsh
 
       - name: Install yq
         shell: pwsh
@@ -74,10 +76,6 @@ jobs:
           $sourcePath = ".\windows\packaging\exe\inno_setup_arm64.iss"
           $destinationPath = ".\windows\packaging\exe\inno_setup.iss"
           Rename-Item -Path $sourcePath -NewName $destinationPath
-        shell: pwsh
-
-      - name: Get SignTool path
-        run: Get-Command signtool.exe
         shell: pwsh
 
       - name: Build exe
