--- a/.github/workflows/test-windows-msix-free-arm64.yml
+++ b/.github/workflows/test-windows-msix-free-arm64.yml
@@ -47,10 +47,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          flutter-version: '3.29.2'
+        shell: pwsh
+        run: .\scripts\install-flutter-github-actions.ps1
 
       - name: Flutter doctor -v
         run: flutter doctor -v
