--- a/.github/workflows/test-windows-zip-free-arm64.yml
+++ b/.github/workflows/test-windows-zip-free-arm64.yml
@@ -1,4 +1,4 @@
-name: Test Windows zip (arm64)
+name: Test Windows zip (free arm64)
 
 on:
   workflow_dispatch:
@@ -22,7 +22,6 @@ jobs:
 
       - name: Configure .env
         run: |
-          echo "$pwd"
           $bytes = echo $env:ENV_KEY | %{[Convert]::FromBase64String($_)}
           [IO.File]::WriteAllBytes("$pwd\.env", $bytes)
         env:
