--- a/.github/workflows/test-windows-exe-free.yml
+++ b/.github/workflows/test-windows-exe-free.yml
@@ -1,4 +1,4 @@
-name: Test Windows exe (arm64)
+name: Test Windows exe (free)
 
 on:
   workflow_dispatch:
@@ -8,14 +8,16 @@ permissions: read-all
 
 jobs:
   exe:
-    name: Create exe (arm64)
-    runs-on: windows-11-arm
+    name: Create exe
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Flutter
-        shell: pwsh
-        run: .\scripts\install-flutter-github-actions.ps1
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version: '3.29.3'
 
       - name: Flutter doctor -v
         run: flutter doctor -v
@@ -37,10 +39,6 @@ jobs:
 
       - name: Install fastforge
         run: dart pub global activate fastforge
-
-      - name: Get SignTool path
-        run: Get-Command signtool.exe
-        shell: pwsh
 
       - name: Install yq
         shell: pwsh
@@ -67,26 +65,14 @@ jobs:
           WINDOWS_EXE_APP_ID: ${{ secrets.WINDOWS_EXE_APP_ID }}
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
 
-      - name: Rename inno_setup_arm64.iss to inno_setup.iss
-        run: |
-          # 移除旧的 inno_setup.iss 文件
-          remove-item -Path "$pwd\windows\packaging\exe\inno_setup.iss" -Force -ErrorAction SilentlyContinue
-          
-          # 重命名 inno_setup_arm64.iss 文件
-          $sourcePath = ".\windows\packaging\exe\inno_setup_arm64.iss"
-          $destinationPath = ".\windows\packaging\exe\inno_setup.iss"
-          Rename-Item -Path $sourcePath -NewName $destinationPath
-        shell: pwsh
-
       - name: Build exe
         shell: pwsh
         run: |
-          set FLUTTER_WINDOWS_PLATFORM=arm64
           fastforge package `
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
             --platform windows `
             --targets exe `
-            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-arm64.{{ext}}'
+            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-x64.{{ext}}'
 
       # Package the build.
       - name: Copy build for exe
@@ -95,7 +81,6 @@ jobs:
 
       - name: Signing
         run: |
-          echo $env:RUNNER_TEMP
           $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
