fix: add arm64 support for windows

--- a/.github/workflows/test-windows-exe-pro-arm64.yml
+++ b/.github/workflows/test-windows-exe-pro-arm64.yml
@@ -1,4 +1,4 @@
-name: Test Windows exe (free arm64)
+name: Test Windows exe (pro)
 
 on:
   workflow_dispatch:
@@ -22,13 +22,14 @@ jobs:
 
       - name: Configure .env
         run: |
+          echo "$pwd"
           $bytes = echo $env:ENV_KEY | %{[Convert]::FromBase64String($_)}
           [IO.File]::WriteAllBytes("$pwd\.env", $bytes)
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
 
-      - name: copy eula.rtf to the windows folder
-        run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
+      - name: copy eula-pro.rtf to the windows folder
+        run: Copy-Item -Path "$pwd\macos\packaging\base\eula-pro.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Copy ChineseSimplified.isl to C:\Program Files (x86)\Inno Setup 6\Languages\
         run: |
@@ -36,10 +37,6 @@ jobs:
 
       - name: Install fastforge
         run: dart pub global activate fastforge
-
-      - name: Get SignTool path
-        run: Get-Command signtool.exe
-        shell: pwsh
 
       - name: Install yq
         shell: pwsh
@@ -50,28 +47,33 @@ jobs:
       - name: Update config
         shell: pwsh
         run: |
+          Copy-Item -Path "$pwd\windows\pro\CMakeLists.txt" -Destination "$pwd\windows\CMakeLists.txt" -Force
+          Copy-Item -Path "$pwd\windows\pro\main.cpp" -Destination "$pwd\windows\runner\main.cpp" -Force
+          Copy-Item -Path "$pwd\windows\pro\Runner.rc" -Destination "$pwd\windows\runner\Runner.rc" -Force
+          Copy-Item -Path "$pwd\windows\pro\app_icon.ico" -Destination "$pwd\windows\runner\resources\app_icon.ico" -Force
+          
           $yamlFile = ".\windows\packaging\exe\make_config.yaml"
           $yamlContent = Get-Content -Raw -Path $yamlFile
           
           # 获取环境变量的值
-          $appId = (Get-Item -Path Env:WINDOWS_EXE_APP_ID).Value
-          $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME).Value
+          $appId = (Get-Item -Path Env:WINDOWS_EXE_APP_ID_PRO).Value
+          $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME_PRO).Value
           
           # 使用 yq 更新多个字段
-          $updatedYamlContent = echo $yamlContent | yq e ".app_id = `"$appId`" | .publisher_name = `"$publisherName`"" -
+          $updatedYamlContent = echo $yamlContent | yq e ".app_id = `"$appId`" | .publisher_name = `"$publisherName`" | .display_name = `"PicGuard Pro`"" -
           
           # 将更新后的内容写回文件
           Set-Content -Path $yamlFile -Value $updatedYamlContent
         env:
-          WINDOWS_EXE_APP_ID: ${{ secrets.WINDOWS_EXE_APP_ID }}
-          WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
+          WINDOWS_EXE_APP_ID_PRO: ${{ secrets.WINDOWS_EXE_APP_ID_PRO }}
+          WINDOWS_PUBLISHER_NAME_PRO: ${{ secrets.WINDOWS_PUBLISHER_NAME_PRO }}
 
       - name: Rename inno_setup_arm64.iss to inno_setup.iss
         shell: pwsh
         run: |
           # 移除旧的 inno_setup.iss 文件
           remove-item -Path "$pwd\windows\packaging\exe\inno_setup.iss" -Force -ErrorAction SilentlyContinue
-          
+
           # 重命名 inno_setup_arm64.iss 文件
           $sourcePath = "$pwd\windows\packaging\exe\inno_setup_arm64.iss"
           $destinationPath = "$pwd\windows\packaging\exe\inno_setup.iss"
@@ -82,10 +84,10 @@ jobs:
         run: |
           set FLUTTER_WINDOWS_PLATFORM=arm64
           fastforge package `
-            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_pro.dart" `
             --platform windows `
             --targets exe `
-            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-arm64.{{ext}}'
+            --artifact-name '{{name}}-pro-{{build_name}}.{{build_number}}-{{platform}}-arm64.{{ext}}'
 
       # Package the build.
       - name: Copy build for exe
@@ -94,34 +96,33 @@ jobs:
 
       - name: Signing
         run: |
-          echo $env:RUNNER_TEMP
-          $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
+          $certificatePath = "$env:RUNNER_TEMP\picguard-pro.pfx"
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
-          $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
+          $bytes = echo $env:WINDOWS_CERTIFICATE_PRO | %{[Convert]::FromBase64String($_)}
           [IO.File]::WriteAllBytes("$certificatePath", $bytes)
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\**\*.exe")
+          & $signtool sign /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD_PRO" /n "$env:WINDOWS_PUBLISHER_NAME_PRO" (get-item ".\**\*.exe")
         env:
-          WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
-          WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
-          WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
+          WINDOWS_CERTIFICATE_PRO: ${{ secrets.WINDOWS_CERTIFICATE_PRO }}
+          WINDOWS_CERTIFICATE_PASSWORD_PRO: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD_PRO }}
+          WINDOWS_PUBLISHER_NAME_PRO: ${{ secrets.WINDOWS_PUBLISHER_NAME_PRO }}
         working-directory: dist
 
       - uses: actions/upload-artifact@v4
         with:
-          name: windows-exe-artifact
+          name: windows-exe-pro-artifact
           path: .\dist\**\*.exe
 
       - name: Clean up
         if: ${{ always() }}
         run: |
           ls
-          if (test-path -Path "$env:RUNNER_TEMP\picguard.pfx") {
-            echo "$env:RUNNER_TEMP\picguard.pfx"
-            remove-item -Path "$env:RUNNER_TEMP\picguard.pfx" -Force -ErrorAction SilentlyContinue
+          if (test-path -Path "$env:RUNNER_TEMP\picguard-pro.pfx") {
+            echo "$env:RUNNER_TEMP\picguard-pro.pfx"
+            remove-item -Path "$env:RUNNER_TEMP\picguard-pro.pfx" -Force -ErrorAction SilentlyContinue
           } else {
-            echo "File($env:RUNNER_TEMP\picguard.pfx) doesn't exist."
+            echo "File($env:RUNNER_TEMP\picguard-pro.pfx) doesn't exist."
           }
           if (test-path -Path "$pwd\.env") {
             echo "Remove file($pwd\.env)"
